--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-	"name": "stapp",
-	"version": "0.0.1",
-	"homepage": "https://github.com/theaidem/stapp",
-	"license": "MIT",
-	"authors": [
-		"kokorin.max <kokorin.max@gmail.com>"
-	],
-	"private": true,
-	"engines": {
-		"node": "*",
-		"npm": "*"
-	},
-	"dependencies": {
-		"bower": "*",
-		"browser-sync": "^1.4.0",
-		"coffee-script": "*",
-		"del": "^0.1.3",
-		"gulp": "^3.8.8",
-		"gulp-bower": "0.0.6",
-		"gulp-browserify": "^0.5.0",
-		"gulp-changed": "^1.0.0",
-		"gulp-coffee": "^2.2.0",
-		"gulp-concat": "^2.4.0",
-		"gulp-copy": "0.0.2",
-		"gulp-ignore": "^1.2.0",
-		"gulp-imagemin": "^1.0.1",
-		"gulp-jade": "^0.8.0",
-		"gulp-minify-css": "^0.3.8",
-		"gulp-minify-html": "^0.1.5",
-		"gulp-notify": "^1.8.0",
-		"gulp-plumber": "^0.6.6",
-		"gulp-rev": "^1.1.0",
-		"gulp-sourcemaps": "^1.1.5",
-		"gulp-stylus": "^1.3.3",
-		"gulp-uglify": "^1.0.1",
-		"gulp-usemin": "^0.3.8",
-		"gulp-util": "^3.0.1",
-		"gulp-watch": "^1.0.4",
-		"jade": "*",
-		"nib": "^1.0.3",
-		"run-sequence": "^0.3.7",
-		"stylus": "*",
-		"wiredep": "^1.8.5"
-	}
+  "name": "stapp",
+  "version": "0.0.1",
+  "homepage": "https://github.com/theaidem/stapp",
+  "license": "MIT",
+  "authors": [
+    "kokorin.max <kokorin.max@gmail.com>"
+  ],
+  "private": true,
+  "engines": {
+    "node": "*",
+    "npm": "*"
+  },
+  "devDependencies": {
+    "bower": "^1.4.1",
+    "browser-sync": "^2.6.5",
+    "coffee-script": "^1.9.2",
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-bower": "0.0.10",
+    "gulp-browserify": "^0.5.1",
+    "gulp-changed": "^1.2.1",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-copy": "0.0.2",
+    "gulp-ignore": "^1.2.1",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-jade": "^1.0.0",
+    "gulp-minify-css": "^1.1.0",
+    "gulp-minify-html": "^1.0.2",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rev": "^3.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-stylus": "^2.0.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-usemin": "^0.3.11",
+    "gulp-util": "^3.0.4",
+    "gulp-watch": "^4.2.4",
+    "jade": "^1.9.2",
+    "nib": "^1.1.0",
+    "run-sequence": "^1.1.0",
+    "stylus": "^0.51.0",
+    "wiredep": "^2.2.2"
+  }
 }
