--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "gulp-ignore": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
-    "gulp-minify-css": "^1.1.0",
-    "gulp-minify-html": "^1.0.2",
+    "gulp-minify-css": "0.3.13",
+    "gulp-minify-html": "0.1.8",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
     "gulp-rev": "^3.0.1",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.2.0",
-    "gulp-usemin": "^0.3.11",
+    "gulp-usemin": "0.3.8",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "jade": "^1.9.2",
