change usemin to spa

--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "gulp-plumber": "^1.0.0",
     "gulp-rev": "^3.0.1",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-spa": "^0.2.2",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.2.0",
-    "gulp-usemin": "0.3.8",
     "gulp-util": "^3.0.4",
     "gulp-watch": "^4.2.4",
     "jade": "^1.9.2",
