--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gulp-ignore": "^1.2.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
-    "gulp-minify-css": "0.3.13",
+    "gulp-minify-css": "^0.3.13",
     "gulp-minify-html": "0.1.8",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.0",
