--- a/package.json
+++ b/package.json
@@ -1,46 +1,51 @@
 {
   "name": "stapp",
   "version": "0.0.1",
+  "description": "A Frontend boilerplate",
   "homepage": "https://github.com/theaidem/stapp",
+  "main": "index.js",
+  "scripts": {
+    "clean": "rimraf dist",
+    "build:webpack": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.prod.js",
+    "build": "npm run clean && npm run build:webpack",
+    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Max Kokorin",
   "license": "MIT",
-  "authors": [
-    "kokorin.max <kokorin.max@gmail.com>"
-  ],
-  "private": true,
-  "engines": {
-    "node": "*",
-    "npm": "*"
+  "dependencies": {
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-logger": "^2.3.2",
+    "redux-simple-router": "^2.0.3",
+    "redux-thunk": "^1.0.3",
+    "semantic-ui-container": "^2.1.7",
+    "semantic-ui-header": "^2.1.7",
+    "semantic-ui-icon": "^2.1.7",
+    "semantic-ui-loader": "^2.1.7",
+    "semantic-ui-menu": "^2.1.7",
+    "semantic-ui-reset": "^2.1.7",
+    "semantic-ui-site": "^2.1.7"
   },
   "devDependencies": {
-    "bower": "^1.4.1",
-    "browser-sync": "^2.6.5",
-    "coffee-script": "^1.9.2",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-bower": "0.0.10",
-    "gulp-browserify": "^0.5.1",
-    "gulp-changed": "^1.2.1",
-    "gulp-coffee": "^2.3.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-copy": "0.0.2",
-    "gulp-ignore": "^1.2.1",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jade": "^1.0.0",
-    "gulp-minify-css": "^0.3.13",
-    "gulp-minify-html": "0.1.8",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.0",
-    "gulp-rev": "^3.0.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-spa": "^0.2.2",
-    "gulp-stylus": "^2.0.1",
-    "gulp-uglify": "^1.2.0",
-    "gulp-util": "^3.0.4",
-    "gulp-watch": "^4.2.4",
-    "jade": "^1.9.2",
-    "nib": "^1.1.0",
-    "run-sequence": "^1.1.0",
-    "stylus": "^0.51.0",
-    "wiredep": "^2.2.2"
+    "babel-core": "^6.4.0",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
+    "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^1.7.0",
+    "react-transform-hmr": "^1.0.1",
+    "rimraf": "^2.5.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.6.0"
   }
 }
