--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Max Kokorin",
   "license": "MIT",
   "dependencies": {
+    "history": "^1.17.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.6",
+    "react-router": "^1.0.3",
     "redux": "^3.0.5",
     "redux-logger": "^2.3.2",
     "redux-simple-router": "^2.0.3",
