--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "redux-logger": "^2.4.0",
     "redux-thunk": "^1.0.3",
     "semantic-ui-container": "^2.1.7",
+    "semantic-ui-grid": "^2.1.7",
     "semantic-ui-header": "^2.1.7",
     "semantic-ui-icon": "^2.1.7",
     "semantic-ui-loader": "^2.1.7",
     "semantic-ui-menu": "^2.1.7",
     "semantic-ui-reset": "^2.1.7",
+    "semantic-ui-segment": "^2.1.7",
     "semantic-ui-site": "^2.1.7"
   },
   "devDependencies": {
