--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": ["es2015", "react"],
+	"presets": ["es2015", "stage-0", "react"],
 	"env": {
 		// only enable it when process.env.NODE_ENV is 'development' or undefined
 		"development": {
