--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build:webpack": "NODE_ENV=production ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
+    "build:webpack": "NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
-    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "start": "node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Max Kokorin",
@@ -43,18 +43,19 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "gh-pages": "^0.9.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "gh-pages": "^0.9.0",
     "html-webpack-plugin": "^1.7.0",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
     "style-loader": "^0.13.0",
-    "webpack-dev-server": "^1.14.1",
     "webpack": "^1.12.12",
+    "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.6.4"
   }
 }
