--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.24.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "eventsource-polyfill": "^0.9.6",
