--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "author": "Max Kokorin",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.3.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
+    "history": "^4.6.2",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.2.1",
-    "redux-logger": "^2.4.0",
-    "redux-thunk": "^1.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-button": "^2.1.7",
     "semantic-ui-container": "^2.1.7",
     "semantic-ui-divider": "^2.1.7",
@@ -38,24 +40,26 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.24.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.4",
+    "ejs-loader": "^0.3.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "gh-pages": "^0.9.0",
-    "html-webpack-plugin": "^1.7.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
+    "gh-pages": "^1.0.0",
+    "handlebars-loader": "^1.5.0",
+    "html-webpack-plugin": "^2.28.0",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.6.4"
   }
 }
