--- a/package.json
+++ b/package.json
@@ -24,19 +24,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "semantic-ui-button": "^2.1.7",
-    "semantic-ui-container": "^2.1.7",
-    "semantic-ui-divider": "^2.1.7",
-    "semantic-ui-grid": "^2.1.7",
-    "semantic-ui-header": "^2.1.7",
-    "semantic-ui-icon": "^2.1.7",
-    "semantic-ui-list": "^2.1.7",
-    "semantic-ui-loader": "^2.1.7",
-    "semantic-ui-menu": "^2.1.7",
-    "semantic-ui-reset": "^2.1.7",
-    "semantic-ui-segment": "^2.1.7",
-    "semantic-ui-site": "^2.1.7"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
