--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "stapp",
   "version": "0.0.1",
-  "description": "A Frontend boilerplate",
+  "description": "Stapp Frontend boilerplate",
   "homepage": "https://github.com/theaidem/stapp",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && npm run build:webpack",
+    "build": "npm run lint && npm run clean && npm run build:webpack",
     "build:webpack": "NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
-    "start": "node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "start": "npm run lint && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "lint": "clear && ./node_modules/.bin/eslint --fix src/scripts/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Max Kokorin",
@@ -37,6 +38,8 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "ejs-loader": "^0.3.0",
+    "eslint": "^4.7.1",
+    "eslint-plugin-react": "^7.3.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
