--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:webpack": "NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
     "start": "npm run lint && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
-    "lint": "clear && ./node_modules/.bin/eslint --fix src/scripts/",
+    "lint": "clear && ./node_modules/.bin/eslint --ext .js --ext .jsx src/scripts",
+    "lint:fix": "clear && ./node_modules/.bin/eslint --fix --ext .js --ext .jsx src/scripts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Max Kokorin",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
@@ -39,6 +41,7 @@
     "css-loader": "^0.28.4",
     "ejs-loader": "^0.3.0",
     "eslint": "^4.7.1",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.3.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^2.1.2",
