--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run lint && npm run clean && npm run build:webpack",
     "build:webpack": "NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
-    "start": "npm run lint && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "start": "clear && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
+    "gen": "clear && node ./scripts/generator.js",
     "lint": "clear && ./node_modules/.bin/eslint --ext .js --ext .jsx source/scripts",
     "lint:fix": "clear && ./node_modules/.bin/eslint --fix --ext .js --ext .jsx source/scripts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "history": "^4.6.2",
+    "inquirer": "^3.3.0",
+    "pluralize": "^7.0.0",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-redux": "^5.0.5",
@@ -29,7 +32,6 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "pre-commit": "^1.2.2",
     "babel-core": "^6.4.5",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
@@ -50,6 +52,7 @@
     "gh-pages": "^1.0.0",
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.28.0",
+    "pre-commit": "^1.2.2",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
     "style-loader": "^0.18.2",
@@ -57,5 +60,7 @@
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.6.4"
   },
-  "pre-commit": ["lint"]
+  "pre-commit": [
+    "lint"
+  ]
 }
