--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
     "start": "clear && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
     "gen": "clear && node ./scripts/generator.js",
-    "lint": "clear && ./node_modules/.bin/eslint --ext .js --ext .jsx source/scripts",
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore --ext .js --ext .jsx source/scripts",
     "lint:fix": "clear && ./node_modules/.bin/eslint --fix --ext .js --ext .jsx source/scripts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-staged": "lint-staged"
   },
   "author": "Max Kokorin",
   "license": "MIT",
@@ -52,6 +53,8 @@
     "gh-pages": "^1.0.0",
     "handlebars-loader": "^1.5.0",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.3.0",
     "pre-commit": "^1.2.2",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
@@ -60,7 +63,9 @@
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.6.4"
   },
-  "pre-commit": [
-    "lint"
-  ]
+  "lint-staged": {
+    "*.{js,jsx}": "lint"
+  },
+  "pre-commit": "lint-staged"
 }
+
