--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,9 @@
         "node": true,
         "es6": true
     },
-    "extends": ["eslint:recommended"],
+    "extends": [
+        "eslint:recommended"
+    ],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
