--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
   "license": "MIT",
   "dependencies": {
     "connected-react-router": "^4.3.0",
-    "favicons-webpack-plugin": "^0.0.7",
+    "favicons-webpack-plugin": "^0.0.9",
     "history": "^4.6.2",
-    "inquirer": "^3.3.0",
+    "inquirer": "^6.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "pluralize": "^7.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
@@ -43,29 +44,31 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.24.0",
     "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^1.0.0",
     "ejs-loader": "^0.3.0",
-    "eslint": "^4.7.1",
-    "eslint-plugin-babel": "^4.1.2",
+    "eslint": "^5.2.0",
+    "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-react": "^7.3.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "gh-pages": "^1.0.0",
     "handlebars-loader": "^1.5.0",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "lint-staged": "^4.3.0",
+    "lint-staged": "^7.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "pre-commit": "^1.2.2",
     "react-transform-hmr": "^1.0.1",
     "rimraf": "^2.5.1",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.4.5",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.6.4"
   },
   "lint-staged": {
-    "*.{js,jsx}": "lint"
+    "*.{js,jsx}": "yarn run lint"
   },
   "pre-commit": "lint-staged"
 }
