--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build:webpack": "NODE_ENV=production node -r babel-register ./node_modules/.bin/webpack --config webpack.config.prod.js",
     "deploy:gh-pages": "GH_PAGES=true npm run build && ./node_modules/.bin/gh-pages -d dist && npm run clean",
     "start": "clear && node -r babel-register ./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js",
-    "gen": "clear && node ./scripts/generator.js",
+    "gen": "clear && node ./scripts/generator.js && npm run lint:fix",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore --ext .js --ext .jsx source/scripts",
-    "lint:fix": "clear && ./node_modules/.bin/eslint --fix --ext .js --ext .jsx source/scripts",
+    "lint:fix": "./node_modules/.bin/eslint --fix --ext .js --ext .jsx source/scripts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint-staged": "lint-staged"
   },
